--- a/clients/client2/horizon/data.yaml
+++ b/clients/client2/horizon/data.yaml
@@ -1,6 +1,6 @@
-train: ../train/images
-val: ../valid/images
-test: ../test/images
+train: /Users/kuangsin/FedAvg/clients/client2/horizon/train/images
+val: /Users/kuangsin/FedAvg/clients/client2/horizon/valid/images
+test: /Users/kuangsin/FedAvg/clients/client2/horizon/test/images
 
 nc: 1
 names: ['leaf']
